# go-typeql

./: .gitignore  .golangci.yml  AGENTS.md  ASYNC_TRANSACTION_CLOSE_DESIGN.md  CLAUDE.md  CODE_REVIEW.md  Makefile  PERFORMANCE_AUDIT.md  README.md  check.sh  doc.go  docker-compose.yml  go.mod  go.sum  key-gaps.md
ast/: builders.go  builders_test.go  compiler.go  compiler_bench_test.go  compiler_fetch_test.go  compiler_integration_test.go  compiler_mutations_test.go  compiler_patterns_test.go  compiler_reduce_test.go  compiler_test.go  fluent.go  fluent_test.go  nodes.go
benchmarks/: README.md  benchmarks.sqlite
docs/: DEBUGGING_HANGS.md  DEVELOPMENT.md  GETTING_STARTED.md  SKILL.md  TESTING.md
driver/: async_test.go  close_backlog_test.go  database.go  debug.go  doc.go  driver.go  driver_options_integration_test.go  driver_options_test.go  errors.go  errors_test.go  ffi.go  ffi_prebuilt.go  ffi_system.go  given.go  given_integration_test.go  given_test.go  hang_regression_test.go  helpers.go  options.go  transaction.go  transaction_operator_integration_test.go  typedb-go-ffi.pc.in  typedb_ffi.h
driver/rust/: Cargo.toml
driver/rust/src/: lib.rs
gotype/: context_test.go  crud.go  crud_test.go  entity.go  errors.go  filter.go  filter_test.go  format.go  format_test.go  hydrate.go  hydrate_bench_test.go  hydrate_datetime_test.go  hydrate_test.go  integ_aggregation_test.go  integ_attr_crud_test.go  integ_bookstore_test.go  integ_chainable_delete_test.go  integ_cyber_test.go  integ_delete_advanced_test.go  integ_delete_many_test.go  integ_drug_test.go  (+54 more)
(+37 files in other folders)
