[package]
name = "typedb-go-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "typedb_go_ffi"
crate-type = ["staticlib"]

[dependencies]
typedb-driver = { version = "3.12.0-rc0", features = ["sync"] }
typeql = "3.12.0-rc0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
